--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,22 @@
   }
 }
 
-html,
+html {
+  scroll-behavior: smooth;
+}
+
+.letter-spacing-2 {
+  letter-spacing: 2px;
+}
+
+.img-hover-zoom {
+  transition: transform 0.3s ease;
+}
+
+.img-hover-zoom:hover {
+  transform: scale(1.02);
+}
+
 body {
   max-width: 100vw;
   overflow-x: hidden;
@@ -40,3 +55,23 @@ a {
     color-scheme: dark;
   }
 }
+
+/* For Contact Section Start */
+#contact{
+  background: url(/images/l.png);
+  background-size: cover;       
+  background-repeat: no-repeat;  
+  background-position: center; 
+}
+/* For Contact Section End */
+
+/* For Footer Start */
+#footer ul li a{
+  color: #262626;
+  font-weight: 500;
+  text-decoration: none;
+}
+#footer ul li a:hover {
+  text-decoration: underline;
+}
+/* For Footer end */
